
Version 0.2.3 - ??
- [new] Automatically activate the username field on the login module.
- [new] Fixtures improvements: Add support for "named objects" in to-many relationships.
- [new] Add WFFormatter smarty plugin to allow use of the PHOCOA formatting infrastructure directly in templates.
- [new] Added "class" support to WFPassword.

Version 0.2.2 - 3/5/2009
- minor tweaks.

Version 0.2.1 - 2/19/2008
- [new] Add KVC method setValuesForKeys()
- [new] Add experimental inter-property validation mechanism, see KVC method validateObject().
- [new] Add addErrors() convenience methods to WFPage and WFWidget.
- [new] WFPage now catches WFErrorsException when thrown from action methods and automatically adds all errors to the page.
        Architecturally this is useful because it allows you to simplify your controllers by no longer having to catch errors
        and translate them to "page errors". Your models can now just throw WFErrorsException objects and you can let the magic happen.
- [new] WFErrorsException class. A specialized exception that handles arrays of the structure used by validateObject().
- [new] WFArray class, or the early beginnings of one. Right now it's just there to make it easy to simulate "prototype pluck" via:
        WFArray::arrayWithArray($arrayOfErrors)->valueForKeyPath('errorMessage')
- [new] Add support for 'class' property to WFLabel.
- [new] Add nullPlaceholder property to WFTextArea and WFLabel.
- [new] WFYAHOO_widget_Uploader now fires a 'WFYAHOO_widget_Uploader:allUploadsComplete' event when the upload is completed, allows fully on-page ajax uploading.
- [new] Add maxUploadBytes parameter to WFYAHOO_widget_Uploader.
- [new] Improve formatting of upload list for WFYAHOO_widget_Uploader; now reports per-file progress and errors.
- [new] Upgrade YUI to 2.7.0.